--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,17 @@
 //colors
+$dark-grey: #333333;
+$light-grey: #f7f7f7;
+$custom-blue: #1c88bf;
+$dark-blue: #364051;
+$grey: #666;
 
+//fonts
+$font-size-large: 1.9rem;
+$font-site-small: 1.4rem;
 
 //spacing
+$xxs-size: .8rem;
+$xs-size: 1rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
